--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
-        "@types/react-router": "^5.1.17",
         "axios": "^0.22.0",
         "daisyui": "^1.14.2",
         "react": "^17.0.2",
@@ -24,7 +23,7 @@
     },
     "scripts": {
         "start": "craco start",
-        "build": "CI=false && craco build",
+        "build": "craco build",
         "test": "jest",
         "eject": "react-scripts eject",
         "testWA": "jest --watchAll --detectOpenHandles"
